<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/baseline_local_printshop_black_24dp"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/baseline_more_horiz_black_24dp"
        android:title="@string/title_more" />

</menu>
