<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/profileLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Order"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:layout_marginVertical="10dp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/title_PickUpLocation"
                    android:textSize="18dp"></TextView>

                <Spinner
                    android:id="@+id/locationEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title_TypePrintShop"
                    android:textSize="18dp"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/title_GoogleDriveLinkofYourFile"
                    android:textSize="18dp"></TextView>

                <EditText
                    android:id="@+id/gdriveLinkEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title_PasteYourLinkhere"
                    android:textSize="18dp"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/title_PaperType"
                    android:textSize="18dp"></TextView>

                <Spinner
                    android:id="@+id/paperEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title_TypePaper"
                    android:textSize="18dp"
                    ></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/title_PrintOption"
                    android:textSize="18dp"></TextView>

                <Spinner
                    android:id="@+id/colorEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title_TypePrintOption"
                    android:textSize="18dp"
                    ></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/text_quantity"
                    android:textSize="18dp"></TextView>

                <EditText
                    android:id="@+id/qtyEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/ph_quantity"
                    android:textSize="18dp"
                    android:inputType="number"
                    ></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/title_Note"
                    android:textSize="18dp"></TextView>

                <EditText
                    android:id="@+id/descEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title_TypeNote"
                    android:textSize="18dp"
                    ></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/title_PaymentMethod"
                    android:textSize="18dp"></TextView>

                <Spinner
                    android:id="@+id/paymentEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/title_TypePaymentMethod"
                    android:textSize="18dp"
                    ></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/orderNowBtn"
                    android:text="@string/title_OrderNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</RelativeLayout>