<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:id="@+id/progressBarLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/common_google_signin_btn_text_dark"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp">
        </ProgressBar>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/title_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionNext">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/title_Password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signinBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_SignIn"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/common_google_signin_btn_text_dark">
            </Button>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_SignUpHere"
                android:backgroundTint="@color/common_google_signin_btn_text_dark">
            </Button>

        </LinearLayout>

        <Button
            android:id="@+id/googleSignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_GoogleSignIn"
            app:icon="@drawable/googleg_standard_color_18"
            android:backgroundTint="@color/common_google_signin_btn_text_dark">
        </Button>

    </LinearLayout>

</RelativeLayout>