<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateProfileActivity">

    <LinearLayout
        android:id="@+id/profileLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_MyAccount"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_marginVertical="50dp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/title_Email"
                android:textSize="18dp"></TextView>

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="My Email"
                android:textSize="18dp"
                android:drawablePadding="10dp"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="20dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/title_Name"
                android:textSize="18dp"></TextView>

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="My Name"
                android:textSize="18dp"
                android:drawablePadding="10dp"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="20dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/title_Phone"
                android:textSize="18dp"></TextView>

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="My Phone"
                android:textSize="18dp"
                android:drawablePadding="10dp"></EditText>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/updateBtn"
                android:text="@string/title_Update_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>